--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script type="module" src="./assets/scripts/index.js" defer></script>
-    <script type="module" src="./assets/scripts/classes.js" defer></script>
-    <title>Word Battle</title>
+    <script type="module" src="./assets/scripts/Score.js" defer></script>
+    <title>Wordium</title>
 </head>
 <body>
     <div class="container">
