--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script type="module" src="./assets/scripts/index.js" defer></script>
-    <script type="module" src="./assets/scripts/classes.js" defer></script>
+    <script type="module" src="./assets/scripts/Score.js" defer></script>
+    <script type="module" src="./assets/scripts/Utilities.js" defer></script>
     <title>Word Battle</title>
 </head>
 <body>
@@ -52,6 +53,7 @@
             <source src="./assets/audio/Sakura-Girl-Motivation-chosic.com_.mp3" type="audio/mp3">
         </audio>
         <button class="start-button">start</button>
+        <button class="score-button"></button>
     </div>
 </body>
 </html>
