--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Maksym Dimov">
-    <!-- <meta name="description" content="My website"> -->
     <meta name="keywords" content="web developer, web, developer, front-end, html, css, javascript, react, sql">
     <link rel="stylesheet" href="./assets/styles/reset.css">
     <link rel="stylesheet" href="./assets/styles/index.css" media="all">
@@ -53,7 +52,68 @@
             <source src="./assets/audio/Sakura-Girl-Motivation-chosic.com_.mp3" type="audio/mp3">
         </audio>
         <button class="start-button">start</button>
-        <button class="score-button"></button>
+        <button class="score-button hidden">Score</button>
+    </div>
+    <div class="score-zone hidden">
+        <div class="score-div hidden">
+            <table class="score-table ">
+                <thead>
+                    <tr>
+                        <th>Place</th>
+                        <th>Score</th>
+                        <th>Percentage</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+            <button class="close-button">Close</button>
+        </div>
     </div>
 </body>
 </html>
